--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="app">
         <header class="container">
-            <img src="./assets/paw.svg" alt="logo do blog">
+            <img class="logo" src="./assets/paw.svg" alt="logo do blog">
             <form>
                 <div class="input-wrapper">
                     <label for="search">Pesquise por artigos</label>
@@ -28,14 +28,15 @@
                 <section>
                     <div class="left">
                         <img id="gato" src="./assets/gato main.jpg" alt="imagem do gato principal">
-
+                            
                         <div class="cabecalho">
                             <h1>Seriam os gatos astronautas?</h1>
                             <div class="symbols">
                                 <img id="like" src="./assets/Button.svg" alt="like">
                                 <img id="deslike" src="./assets/Button-1.svg" alt="deslike">
-                            </div>
+                            </div> 
                         </div>
+
                         <p>Os gatos são animais fascinantes e cercados de mistérios. De temperamento independente e misterioso, esses felinos são conhecidos por sua agilidade, elegância e um comportamento muitas vezes imprevisível. Contudo, recentemente, uma teoria tem ganhado espaço na internet e entre teóricos de conspiração: seriam os gatos astronautas? <br>
                             A teoria sugere que os gatos não são animais terrestres, mas sim seres extraterrestres enviados para realizar uma missão específica em nosso planeta. Há relatos históricos que apontam para o fato de que os gatos eram considerados seres sagrados em diferentes culturas e até mesmo associados a figuras divinas. Isso poderia indicar que os gatos têm uma origem muito mais mística do que se pensava anteriormente. <br> <br>
                             
@@ -44,41 +45,43 @@
 
                     <aside>
                         <h1>Artigos relacionados</h1>
-                        <figure>
-                            <img src="./assets/1.jpg" alt="">
-                            <figcaption>
-                                <h2>Sábado preguiçoso</h2>
-                                <p>Descubra atividades interessantes para fazer com seuet durante os finais de semana</p>
-                            </figcaption>
-                        </figure>
-                        <figure>
-                            <img src="./assets/2.jpg" alt="">
-                            <figcaption>
-                                <h2>Balaio de gatos</h2>
-                                <p>Como evitar confusões entre seus gatíneos e acostumá-los desde filhotes.</p>
-                            </figcaption>
-                        </figure>
-                        <figure>
-                            <img src="./assets/3.jpg" alt="">
-                            <figcaption>
-                                <h2>Cartela de cores</h2>
-                                <p>Seu gato é inverno intenso? Verão profundo? Descubra as cores que mais combinam com seu bichano.</p>
-                            </figcaption>
-                        </figure>
-                        <figure>
-                            <img src="./assets/4.jpg" alt="">
-                            <figcaption>
-                                <h2>Os gatos sentem frio?</h2>
-                                <p>Preparem-se para a frente fria que vem para o país da melhor maneira possível.</p>
-                            </figcaption>
-                        </figure>
-                        <figure>
-                            <img src="./assets/5.jpg" alt="">
-                            <figcaption>
-                                <h2>Conheça o Moacir</h2>
-                                <p>Moacir é o gatinho da semana do nosso blog. Venha conhecer sua história de superação.</p>
-                            </figcaption>
-                        </figure>
+                        <div class="artigos">
+                            <figure>
+                                <img src="./assets/1.jpg" alt="">
+                                <figcaption>
+                                    <h2>Sábado preguiçoso</h2>
+                                    <p>Descubra atividades <br> interessantes para fazer com seu pet durante os finais de semana</p>
+                                </figcaption>
+                            </figure>
+                            <figure>
+                                <img src="./assets/2.jpg" alt="">
+                                <figcaption>
+                                    <h2>Balaio de gatos</h2>
+                                    <p>Como evitar confusões entre seus gatíneos e acostumá-los desde filhotes.</p>
+                                </figcaption>
+                            </figure>
+                            <figure>
+                                <img src="./assets/3.jpg" alt="">
+                                <figcaption>
+                                    <h2>Cartela de cores</h2>
+                                    <p>Seu gato é inverno intenso? Verão profundo? Descubra as cores que mais combinam com seu bichano.</p>
+                                </figcaption>
+                            </figure>
+                            <figure>
+                                <img src="./assets/4.jpg" alt="">
+                                <figcaption>
+                                    <h2>Gatos sentem frio?</h2>
+                                    <p>Preparem-se para a frente fria que vem para o país da melhor maneira possível.</p>
+                                </figcaption>
+                            </figure>
+                            <figure>
+                                <img src="./assets/5.jpg" alt="">
+                                <figcaption>
+                                    <h2>Conheça o Moacir</h2>
+                                    <p>Moacir é o gatinho da semana do nosso blog. Venha conhecer sua história de superação.</p>
+                                </figcaption>
+                            </figure>
+                        </div>
                     </aside>
                 </section>
             </div>
